<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.4.1</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>

	<groupId>com.tokioschool.filmapp</groupId>
	<artifactId>SpringCinemaApplication</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>SpringCinemaApplication</name>
	<description>SpringCinemaApplication</description>
	<modules>
		<module>liquibase-module</module>
		<module>film-api</module>
		<module>domain-module</module>
		<module>repository-module</module>
		<module>services-module</module>
		<module>core-film</module>
	</modules>
	<packaging>pom</packaging>


	<properties>
		<java.version>22</java.version>
		<maven.compiler.source>22</maven.compiler.source>
		<maven.compiler.target>22</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<spring-boot-maven-plugin.version>3.4.0</spring-boot-maven-plugin.version>
		<springboot.version>3.4.0</springboot.version>
		<spring-modulith.version>1.3.1</spring-modulith.version>
		<commons-lang3.version>3.12.0</commons-lang3.version>
		<modelmapper.version>3.2.0</modelmapper.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.modulith</groupId>
				<artifactId>spring-modulith-bom</artifactId>
				<version>${spring-modulith.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<dependency>
				<groupId>com.tokioschool.filmapp</groupId>
				<artifactId>liquibase-module</artifactId>
				<version>${version}</version>
			</dependency>

			<dependency>
				<groupId>com.tokioschool.filmapp</groupId>
				<artifactId>film-api</artifactId>
				<version>${version}</version>
			</dependency>

			<dependency>
				<groupId>com.tokioschool.filmapp</groupId>
				<artifactId>repository-module</artifactId>
				<version>${version}</version>
			</dependency>

			<dependency>
				<groupId>com.tokioschool.filmapp</groupId>
				<artifactId>core-film</artifactId>
				<version>${version}</version>
			</dependency>

			<dependency>
				<groupId>com.tokioschool.filmapp</groupId>
				<artifactId>services-module</artifactId>
				<version>${version}</version>
			</dependency>

			<dependency>
				<groupId>com.tokioschool.filmapp</groupId>
				<artifactId>domain-module</artifactId>
				<version>${version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<!-- spring -->
		<dependency>
			<groupId>org.springframework.modulith</groupId>
			<artifactId>spring-modulith-starter-core</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.modulith</groupId>
			<artifactId>spring-modulith-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<!-- external -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.modelmapper</groupId>
			<artifactId>modelmapper</artifactId>
			<version>${modelmapper.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>${commons-lang3.version}</version>
		</dependency>
	</dependencies>


	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-maven-plugin</artifactId>
					<version>${spring-boot-maven-plugin.version}</version>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
				<configuration>
					<source>${maven.compiler.source}</source>
					<target>${maven.compiler.target}</target>
					<compilerArgs>
						<arg>-parameters</arg>
						<arg>--enable-preview</arg>
					</compilerArgs>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.5.2</version>
				<configuration>
					<argLine>--enable-preview</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<!-- profiles -->
	<profiles>
		<profile>
			<id>dev</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<properties>
				<spring.profiles.active>dev</spring.profiles.active>
			</properties>
		</profile>

		<profile>
			<id>pro</id>
			<properties>
				<spring.profiles.active>pro</spring.profiles.active>
			</properties>
		</profile>
	</profiles>
</project>
